@@ -28,10 +28,15 @@
 		 */
 		form: undefined,
 
+		closeAction: 'hide',
+		layout: 'border',
 		title: CMDBuild.Translation.viewEmail,
 
-		layout: 'border',
-
+		/**
+		 * @returns {Void}
+		 *
+		 * @override
+		 */
 		initComponent: function () {
 			Ext.apply(this, {
 				dockedItems: [
@@ -152,8 +157,8 @@
 		},
 
 		listeners: {
-			beforedestroy: function (window, eOpts) {
-				return this.delegate.cmfg('onTabEmailEmailWindowBeforeDestroy');
+			beforeclose: function (window, eOpts) {
+				return this.delegate.cmfg('onTabEmailEmailWindowBeforeClose');
 			}
 		}
 	});
